LPS-119353 Fix visibility of topic selector when the topic name is too long

--- a/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
+++ b/modules/apps/questions/questions-web/src/main/resources/META-INF/resources/css/main.scss
@@ -270,6 +270,9 @@
 	}
 
 	.breadcrumb {
+		.questions-breadcrumb-item {
+			max-width: 14rem;
+		}
 		.breadcrumb-item {
 			color: $secondary;
 			font-size: 1.15rem;
